# tfm_project

./: .gitattributes  .gitignore  README.md  api.py  app.py  main.py  pyproject.toml  requirements.txt
encuesta_ECV/: TFM_ECV_Bronze_Silver.ipynb
encuesta_ECV/data/: dataset_analiticom.csv
encuesta_ECV/data/01_bronze/info/: 01_info_datos_hogar.xlsx  02_info_detalle_hogar.xlsx  03_info_detalle_adultos.xlsx
encuesta_ECV/scripts/: ecv2025_pipeline.py  mapeo_ecv.py
src/: 01_bronze_layer.ipynb  02_silver_layer.ipynb  03_gold_layer.ipynb  TFM_ECV_Bronze_Silver.ipynb
src/data/: datos.txt
src/data/01_bronze/: 01_datos_hogar.csv
src/data/01_bronze/info/: 04_info_datos_persona.xlsx
src/data/02_silver/: dataset_analitico.csv
src/data/02_silver/test_silver/: test_silver.csv
src/data/02_silver/train_silver/: salarios_ocupacion.csv  train_silver.csv
src/data/03_gold/: test_gold_all.csv  train_gold_sel.csv
src/data/03_gold/raw/: FEATURES_CAT.txt  FEATURES_NUM.txt
src/data/03_gold/test_gold/: test_gold_sel.csv
src/data/03_gold/train_gold/: train_gold_all.csv
src/data/mapeo/: 01_datos_hogar_mapeado.csv
src/models/: lg_optimo.pkl  lg_streamlit.pkl  metadata.json  pipeline_final.pkl
src/notebooks/: 01_eda.ipynb  02_modelado.ipynb
src/scripts/: 01_broze_to_silver.py  02_silver_to_gold.py  bronze_to_silver.py  constants_var.py  gold_ecv.py  limpieza_ecv.py  model_pipeline.py
src/utils/: cleaning_utils.py  constants_utils.py  constants_var.py  functions_utils.py  mapeo_utils.py  visualizations_utils.py
