[project]
name = "tfm-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.3",
    "joblib>=1.5.3",
    "kaleido>=1.3.0",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.9",
    "nbformat>=5.10.4",
    "numpy>=2.4.4",
    "optuna>=4.9.0",
    "pandas>=3.0.2",
    "pydantic>=2.13.4",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "setuptools<81",
    "uvicorn>=0.49.0",
    "xgboost>=3.2.0",
]
